--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <!-- PROJETOS -->
     <section id="proj" class="proj">
         <div class="proj1">
-            <h2>PORTFOLIO</h2>
+            <h2>PROJETOS</h2>
             <div class="galeria">
                 <div class="proj2">
                     <img src="image/p1.PNG" alt="">
